# AssetKit

./: .atom-build.yml  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md  appveyor.yml  autogen.sh  build-deps.sh  confcache  configure.ac  makefile.am  post-build.sh  post-configure.sh
src/: CMakeLists.txt  accessor.c  accessor.h  aio_common.c  aio_common.h  aio_libxml.c  aio_libxml.h  aio_memory.c  aio_memory.h  aio_string.c  aio_tree.c  aio_tree.h  aio_types.h  aio_utils.c  aio_utils.h  ak_accessor.c  ak_accessor.h  ak_array.c  ak_array.h  ak_asset.c  ak_common.c  ak_common.h  ak_data.c  ak_data.h  ak_find.c  ak_id.c  ak_id.h  ak_json.c  ak_json.h  ak_lib.c  ak_libxml.c  ak_libxml.h  ak_main.c  ak_map.c  ak_map.h  ak_memory.c  ak_memory.h  ak_memory_common.h  ak_memory_ext.c  ak_memory_intr.c  (+74 more)
src/array/: CMakeLists.txt  ak_source_array.c  source_array.c
src/bbox/: CMakeLists.txt  ak_bbox.c  ak_bbox.h  ak_bbox_geom.c  ak_bbox_mesh.c  ak_bbox_mesh_prim.c  ak_bbox_scene.c  bbox.c  bbox.h  bbox_geom.c  bbox_mesh.c  bbox_mesh_prim.c  bbox_scene.c  geom.c  mesh.c  mesh_prim.c  scene.c
src/bitwise/: CMakeLists.txt  ak_bitwise.c  ak_bitwise.h  bitwise.h
src/camera/: CMakeLists.txt  ak_cam.c  cam.c
src/collada/: aio_collada.c  aio_collada.h  aio_collada_annotate.c  aio_collada_annotate.h  aio_collada_asset.c  aio_collada_asset.h  aio_collada_camera.c  aio_collada_camera.h  aio_collada_color.c  aio_collada_color.h  aio_collada_common.c  aio_collada_common.h  aio_collada_light.c  aio_collada_light.h  aio_collada_param.c  aio_collada_param.h  aio_collada_strpool.c  aio_collada_strpool.h  aio_collada_strpool.json  aio_collada_technique.c  aio_collada_technique.h  aio_collada_techniquec.c  aio_collada_value.c  aio_collada_value.h  ak_collada.c  ak_collada.h  ak_collada_annotate.c  ak_collada_annotate.h  ak_collada_asset.c  ak_collada_asset.h  ak_collada_camera.c  ak_collada_camera.h  ak_collada_color.c  ak_collada_color.h  ak_collada_common.c  ak_collada_common.h  ak_collada_geom_fixup.c  ak_collada_geom_fixup.h  ak_collada_geomety_fixup.c  ak_collada_geomety_fixup.h  (+48 more)
src/collada/1.4/: ak_collada14.c  ak_collada14.h  ak_collada14_image.c  ak_collada14_image.h  ak_collada14_surface.c  ak_collada14_surface.h  dae14.c  dae14.h  dae14_image.c  dae14_image.h  dae14_surface.c  dae14_surface.h  image.c  image.h  surface.c  surface.h
src/collada/brep/: ak_collada_brep.c  ak_collada_brep.h  ak_collada_brep_curve.c  ak_collada_brep_curve.h  ak_collada_brep_nurbs.c  ak_collada_brep_nurbs.h  ak_collada_brep_surface.c  ak_collada_brep_surface.h  ak_collada_brep_topology.c  ak_collada_brep_topology.h  brep.c  brep.h  curve.c  curve.h  dae_brep.c  dae_brep.h  dae_brep_curve.c  dae_brep_curve.h  dae_brep_nurbs.c  dae_brep_nurbs.h  dae_brep_surface.c  dae_brep_surface.h  dae_brep_topology.c  dae_brep_topology.h  nurb.c  nurb.h  surface.c  surface.h  topology.c  topology.h
src/collada/bugfix/: transp.c  transp.h
src/collada/core/: ak_collada_accessor.c  ak_collada_accessor.h  ak_collada_annotate.c  ak_collada_annotate.h  ak_collada_asset.c  ak_collada_asset.h  (+146 more)
src/controller/: ctlr.c
src/coord/: CMakeLists.txt  camera.c  common.c  common.h  doc.c  geom.c  mesh.c  node.c  scene.c  transform.c  transforms.c  vector.c
src/coord_sys/: ak_coord_camera.c  ak_coord_common.c  ak_coord_common.h  ak_coord_cvt.c  ak_coord_doc.c  ak_coord_geom.c  ak_coord_mesh.c  ak_coord_node.c  ak_coord_scene.c  ak_coord_transform.c  ak_coord_transforms.c  ak_coord_vector.c  coord_camera.c  coord_common.c  coord_common.h  coord_doc.c  coord_geom.c  coord_mesh.c  coord_node.c  coord_scene.c  coord_transform.c  coord_transforms.c  coord_vector.c
src/ctlr/: ctlr.c
src/default/: CMakeLists.txt  ak_def_cam.c  ak_def_cam.h  ak_def_cmp.c  ak_def_coord.c  ak_def_id.c  ak_def_light.c  ak_def_light.h  ak_def_material.c  ak_def_material.h  ak_def_opt.c  ak_def_opt.h  ak_def_semantic.c  ak_def_semantic.h  ak_def_type.c  ak_def_type.h  ak_default_coord.c  cam.c  cam.h  cmp.c  coord.c  def_cam.c  def_cam.h  def_coord.c  def_light.c  def_light.h  def_material.c  def_opt.c  def_semantic.c  def_type.c  id.c  light.c  light.h  material.c  material.h  opt.c  opt.h  semantic.c  semantic.h  type.c  (+1 more)
src/geom/: CMakeLists.txt  ak_geom_mesh.c  geom_mesh.c  mesh.c
src/gltf/: gltf.c  gltf.h  gltf_common.h  gltf_mesh_fixup.c  gltf_mesh_fixup.h  gltf_postscript.c  gltf_postscript.h  gltf_strpool.c  gltf_strpool.h  gltf_strpool.json  gltf_strpool.py  mesh_fixup.c  strpool.c
src/image/: CMakeLists.txt  ak_image.c  image.c  stb_image.h
src/instance/: CMakeLists.txt  ak_inst.c  ak_inst_geom.c  ak_inst_list.c  inst.c  inst_list.c  list.c
src/io/: CMakeLists.txt
src/lib/: CMakeLists.txt  ak_lib.c  ak_lib_geom.c  geom.c  lib.c  lib_geom.c
src/light/: CMakeLists.txt  ak_light.c  light.c
src/mat/: mat.c
src/mem/: common.h  ext.c  intr.c  lt.c  lt.h  mem.c  mmap.c  rb.c  rb.h
src/mesh/: ak_mesh_duplicator.c  ak_mesh_edit.c  ak_mesh_edit_array.c  ak_mesh_edit_array_fixup.c  ak_mesh_edit_common.h  ak_mesh_edit_index.c  ak_mesh_index.c  ak_mesh_index.h  ak_mesh_input.c  ak_mesh_material.c  ak_mesh_normal.c  ak_mesh_triangulate.c  ak_mesh_util.c  ak_mesh_util.h  duplicator.c  edit.c  edit_buff.c  edit_buff_fixup.c  edit_common.h  edit_index.c  index.c  index.h  input.c  isolate.c  material.c  mesh_duplicator.c  mesh_edit.c  mesh_edit_buff.c  mesh_edit_buff_fixup.c  mesh_edit_index.c  mesh_index.c  mesh_index.h  mesh_input.c  mesh_material.c  mesh_normal.c  mesh_triangulate.c  mesh_util.c  mesh_util.h  normal.c  triangulate.c
src/miniz/: miniz.h
src/morph/: intr.c
src/node/: ak_node.c  node.c
src/resc/: ak_curl.c  ak_curl.h  ak_path.c  ak_resource.c  ak_resource.h  ak_url.c  curl.c  curl.h  path.c  resource.c  resource.h  url.c
src/scripts/: strpool.py
src/skin/: fix.c  fix.h  skin.c  skin_fix.c  skin_fix.h
src/topo/: topo.c  topo.h
src/transform/: ak_trans.c  ak_trans_dup.c  ak_trans_traverse.c  dup.c  trans.c  trans_dup.c  trans_traverse.c  traverse.c
src/win32/: dllmain.c  strptime.c
(+571 files in other folders)
